# gravity_hunters_vita

./: .gitignore  CMakeLists.txt  README.md  licenses.txt
.devcontainer/: devcontainer.json
assets/: credits.txt  help.txt
assets/audio/: generate_shot_sound.py
assets/images/: atlas_to_polygons.py  create_spritesheet.py
assets/images/enemies_polygon/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  polygons.json
assets/images/player_polygon/: 1.json  polygons.json
assets/levels/: 01_-_Intro.json  01_-_Intro.lvl  02_-_First_mission.json  02_-_First_mission.lvl  03_-_Pest_control.json  03_-_Pest_control.lvl  04_-_Ambush.json  04_-_Ambush.lvl  05_-_Magellanic.json  05_-_Magellanic.lvl  06_-_Oat_Milk_Way.json  06_-_Oat_Milk_Way.lvl  07_-_Birds_in_Space.json  07_-_Birds_in_Space.lvl  08_-_Trickshots.json  08_-_Trickshots.lvl  09_-_Space_Bees!!!.json  09_-_Space_Bees!!!.lvl  1.json  1.lvl  10_-_Itchy.json  10_-_Itchy.lvl  11_-_Nova_Nomads.json  11_-_Nova_Nomads.lvl  12_-_Pirate_Drones.json  12_-_Pirate_Drones.lvl  2.json  2.lvl  3.json  3.lvl  4.json  4.lvl  5.json  5.lvl  6.json  6.lvl  example_level.json  example_level.lvl  level_compiler.py  level_editor.html
licenses/: assets_license.txt  bzip2_license.txt  code_license.txt  font_license.txt  freetype_license.txt  game_license.txt  libjpeg_license.txt  libpng_license.txt  libwebp_license.txt  sdl2_image_license.txt  sdl2_license.txt  sdl2_ttf_license.txt  zlib_license.txt
src/: main.c
src/app/: app.c  app.h  scene.c  scene.h  scenestack.c  scenestack.h
src/core/: log.c  log.h  math.c  math.h  rand.c  rand.h  time.c  time.h  types.h
src/game/: campaign_levels.c  campaign_levels.h  campaign_progress.c  campaign_progress.h  collision.c  collision.h  enemy.c  enemy.h  enemy_types.h  entity.h  entity_helpers.c  entity_helpers.h  explosion.c  explosion.h  hud.c  hud.h  level_loader.c  level_loader.h  planet.c  planet.h  player.c  player.h  projectile.c  projectile.h  projectile_system.c  projectile_system.h  ui_prompts.c  ui_prompts.h  weapon.c  weapon.h  world.c  world.h
src/scenes/: overlay_campaign_details.c  overlay_campaign_details.h  overlay_endgame.c  overlay_endgame.h  overlay_endgame_qp.c  overlay_endgame_qp.h  overlay_pause.c  overlay_pause.h  overlay_start_game.c  overlay_start_game.h  scene_campaign.c  scene_campaign.h  scene_campaign_menu.c  scene_campaign_menu.h  scene_credits.c  scene_credits.h  scene_game.c  scene_game.h  scene_help.c  scene_help.h  scene_loading.c  scene_loading.h  scene_menu.c  scene_menu.h  scene_quick_play.c  scene_quick_play.h  scene_quick_play_menu.c  scene_quick_play_menu.h  scene_textbox.c  scene_textbox.h
src/services/: audio.c  audio.h  input.c  input.h  renderer.c  renderer.h  services.c  services.h  texture_manager.c  texture_manager.h
src/ui/: ui_prompts.c
